<resources>
    <string name="app_name">almersal</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBVTosczyliutwohQGmBlShgHvZO-CHldU</string>
    <string name="default_notification_channel_id" translatable="false">313</string>
    <string name="contentDescription">content Description</string>
    <string name="Email">Email</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="Birthdate">Birth date</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="businessOwner">I\'m Business Owner</string>
    <string name="Accept">Accept</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="termsandconditions">Terms and conditions</string>
    <string name="SignUp">Signup</string>
    <string name="haveanaccount">Have an account?</string>
    <string name="Login">Login</string>
    <string name="pleaseWait">Please wait &#8230;</string>
    <string name="enteremail">Enter email</string>
    <string name="enter_business_name">Please Enter business name</string>
    <string name="entercorrectemail">Enter correct email</string>
    <string name="enterusername">Enter username</string>
    <string name="enterpassword">Enter password</string>
    <string name="accepttermsandconditions">Accept terms and conditions</string>
    <string name="selectBirthDate">Select Birthdate</string>
    <string name="invalidEmailorPassword">Invalid email or password</string>
    <string name="checkInternetConnection">Check internet connection</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="doYouWantAddFirstBusiness">Do you want add first business</string>
    <string name="AlreadyExisted">Already existed</string>
    <string name="signInHeader">Welcome to Almersal \n Your best destination to find \n great deals around</string>
    <string name="Forgotpassword">Forgot password?</string>
    <string name="or">or</string>
    <string name="Register">Register</string>
    <string name="anewAccount">a new account</string>
    <string name="forgotHeader">So you forgot your password?</string>
    <string name="Submit">Submit</string>
    <string name="resetPassword">Reset password</string>
    <string name="emailnotExisted">Email not existed</string>
    <string name="resetPasswordSuccesfully">Please check your mail </string>
    <string name="Filter">Filter</string>
    <string name="Searchkeyword">Search keyword</string>
    <string name="Keyword">Keyword</string>
    <string name="Category">Category</string>
    <string name="City">City</string>
    <string name="Area">Area</string>
    <string name="Apply">Apply</string>
    <string name="BusinessGuide">Business Guide</string>
    <string name="FindNearBy">Find Nearby</string>
    <string name="OnDutyPharmacies">Oncall Pharmacy</string>
    <string name="ResumeBtn">Resume</string>
    <string name="Addedin">Added In</string>
    <string name="Contact">Contact</string>
    <string name="Description">Description</string>
    <string name="AdsAdded">Ads Added</string>
    <string name="SubscribetoCategory">Subscribe to categories</string>
    <string name="MyAds">My Ads</string>
    <string name="MyBusiness">My Business</string>
    <string name="Profile">Profile</string>
    <string name="MyProfile">My Profile</string>
    <string name="AddNewAd">Add New Ad</string>
    <string name="AdTitleMaxchars">Ad Title ( Max 35 chars )</string>
    <string name="HouseForSale">House for sale</string>
    <string name="AboutYourAd">About your ad</string>
    <string name="Images">Images</string>
    <string name="RegisterBusiness">Register Business</string>
    <string name="AddSubmitted">Add Submitted</string>
    <string name="Backtohome">Back to home</string>
    <string name="WeWillReviewYourAdAndContactYouBack">We will review your ad and contact \n you back</string>
    <string name="AddBusiness">Add Business</string>
    <string name="Skip">Skip</string>
    <string name="BusinessName">Business name</string>
    <string name="Phonenumber">Phone number</string>
    <string name="Phonenumber2">Phone number2</string>
    <string name="businessType">Business Type</string>
    <string name="SubCategory">Sub-Category</string>
    <string name="Location">Location</string>
    <string name="Optional">(Optional)</string>
    <string name="Fax">Fax</string>
    <string name="Edit">Edit</string>
    <string name="Ok">OK</string>
    <string name="ServicesAndProducts">Services and products</string>
    <string name="Your">Your</string>
    <string name="selectWhatAreYou">select what are you look for \n and we will find you top 3 nearby ones</string>
    <string name="Categories">Categories</string>
    <string name="SubCategories">SubCategories</string>
    <string name="NoDataFound">No data found</string>
    <string name="Retry">Retry</string>
    <string name="noMoreVolumeFound">No more volume found</string>
    <string name="In">In</string>
    <string name="Location_Permission_denied">Location Permission denied.</string>
    <string name="Approve_Permissions_To_Pick_Images">Approve permissions to open images</string>
    <string name="UpdateProfile">Update profile</string>
    <string name="NoInternetConnection">No internet connection</string>
    <string name="NoInternetConnectionTryRefreshData">No internet connection try refresh data</string>
    <string name="UploadImageForServiceOrProduct">Upload image for service or product</string>
    <string name="ProductName">Product name</string>
    <string name="PickUpLocation">Pick up location</string>
    <string name="pleaseSelectLocation">Please select location</string>
    <string name="uploadFileSuccessfully">Upload file successfully</string>
    <string name="Add">Add</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Satday">Satday</string>
    <string name="Friday">Friday</string>
    <string name="Tueday">Tueday</string>
    <string name="Wenday">Wenday</string>
    <string name="Thuday">Thuday</string>
    <string name="openDays">Open days</string>
    <string name="unexpectedErrorHappend">Unexpected error happend</string>
    <string name="productAddedSuccessfully">Product added successfully</string>
    <string name="productUpdatedSuccessfully">Product updated successfully</string>
    <string name="Call">Call</string>
    <string name="Address">Address</string>
    <string name="Update">Update</string>
    <string name="profileUpdatedSuccessfully">Profile updated successfully</string>
    <string name="copyRight">&#169; All rights reserved by almersal 2019. \n
        No part of this publication may be reproduced. distributed, \n
        or transmitted on any form or by any means</string>
    <string name="Logout">Logout</string>
    <string name="AboutUs">About us</string>
    <string name="settingsTitle">Know whats arround you</string>
    <string name="ContactUs">Contact us</string>
    <string name="TermsOfUse">Terms of use</string>
    <string name="SendMail">Send mail</string>
    <string name="Notifications">Notifications</string>
    <string name="doYouWantFollowNotificationsUnderThisCategory">Do you want follow notifications under this category</string>
    <string name="doYouWantUnFollowNotificationsUnderThisCategory">Do you want unfollow notifications under this category</string>
    <string name="SubscribedCategoriesUpdateSuccessfully">Subscribed categories update successfully</string>
    <string name="selectTopicsDoYou">Please select the ads types \n you are interested in</string>
    <string name="weCannotDetermineYourLocation">We can\'t determine your location</string>
    <string name="enterNumber">Enter number</string>
    <string name="Videos">Videos</string>
    <string name="cantPlayThisVideo">Can\'t play this video</string>
    <string name="noApplicationToOpenEmail">No application found to open email</string>
    <string name="delete">delete</string>
    <string name="doYouWantDeleteAllNotifications">Do you want delete all notifications</string>
    <string name="notificationsDeleteSuccessfully">Notifications delete successfully</string>
    <string name="notificationDeleteSuccessfully">Notification delete successfully</string>
    <string name="notificationsDeleteFailed">Notifications delete failed</string>
    <string name="notificationDeleteFailed">Notification delete failed</string>
    <string name="delete_notification">delete this notification?</string>
    <string name="NewVolumeAdded">There is some ads that might interest you in this new volume</string>
    <string name="experience">Experience</string>
    <string name="skills">Skills</string>
    <string name="education">Education</string>
    <string name="references">References</string>
    <string name="done">Done</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="name">Name</string>
    <string name="specialty">Specialty</string>
    <string name="bio">Bio</string>
    <string name="phone">Phone</string>
    <string name="contact_info">Contact Info</string>
    <string name="save_amp_preview"><![CDATA[Save & Preview]]></string>
    <string name="preview_without_saving">Preview without saving</string>
    <string name="position_title">Position Title</string>
    <string name="company_name">Company Name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="i_currently_work_here">I currently work here</string>
    <string name="required_field">This field is required</string>
    <string name="present">Present</string>
    <string name="education_title">Title</string>
    <string name="educational_entity">Educational Entity</string>
    <string name="skill_search_hint">E.g. Development, Marketing, Design, etc</string>
    <string name="view_cv">View CV</string>
    <string name="new_string">New</string>
    <string name="job_offers">Job Offers</string>
    <string name="responsibilities">Responsibilities</string>
    <string name="qualifications">Qualifications</string>
    <string name="salary_range">Salary Range</string>
    <string name="education_level">Education Level</string>
    <string name="job_type">Job Type</string>
    <string name="deactivate">Deactivate</string>
    <string name="applied_before">Applied before</string>
    <string name="applied_success">Your application has been sent successfully</string>
    <string name="base_info">Base Info</string>
    <string name="name_ar">Name Ar</string>
    <string name="name_en">Name En</string>
    <string name="description_ar">Description Ar</string>
    <string name="description_en">Description En</string>
    <string name="responsibilities_ar">Responsibilities Ar</string>
    <string name="responsibilities_en">Responsibilities En</string>
    <string name="qualifications_ar">Qualifications Ar</string>
    <string name="qualifications_en">Qualifications En</string>
    <string name="job_added">Job has been added successfully</string>
    <string name="job_deactived">This job has been deactivated</string>
    <string name="job_edited">Job has been edited successfully</string>
    <string name="invalid_link">Invalid Link</string>
    <string name="status_success">Status has been changed successfully</string>
    <string name="status_failed">Updating status failed</string>
    <string name="market">Market</string>
    <string name="newspaper">Newspaper</string>
    <string name="my_products">My Products</string>
    <string name="add_new_product">Add New Product</string>
    <string name="price">Price</string>
    <string name="we_will_review_your_product_and_contact_you_back">We Will Review Your Product And Contact You Back</string>
    <string name="update_product">Update Product</string>
</resources>