<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@color/white"
    android:padding="20dp">
    
    
    <android.support.design.widget.TextInputEditText
        android:id="@+id/educationTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/education_title"
        android:inputType="text"
        android:textColor="@color/grayDarkTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <android.support.design.widget.TextInputEditText
        android:id="@+id/educationEntity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/educational_entity"
        android:inputType="text"
        android:textColor="@color/grayDarkTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/educationTitle" />
    
    
    <android.support.design.widget.TextInputEditText
        android:id="@+id/descriptionEducation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Description"
        android:inputType="text"
        android:textColor="@color/grayDarkTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/educationEntity" />
    
    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />
    
    <android.support.design.widget.TextInputEditText
        android:id="@+id/fromEducation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:focusableInTouchMode="false"
        android:hint="@string/from"
        android:inputType="text"
        android:textColor="@color/grayDarkTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionEducation" />
    
    
    <android.support.design.widget.TextInputEditText
        android:id="@+id/toEducation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:focusableInTouchMode="false"
        android:hint="@string/to"
        android:inputType="text"
        android:textColor="@color/grayDarkTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/descriptionEducation" />
    
    
    <android.support.v7.widget.CardView
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/elevation"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/toEducation">
        
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/doneEducation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:shadowColor="@color/grayDarkTextColor"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>

